optimize: debug api & core & base
