# backend/shortVideoCoreService/openapi.yaml
@@ -51,6 +51,10 @@ paths:
                   in: query
                   schema:
                     type: string
+                - name: accountId
+                  in: query
+                  schema:
+                    type: string
             responses:
                 "200":
                     description: OK
